<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="err_msg">Oops! You can send Message to developer for Checking Log</string>
    <string name="app_name">DGG E-Contract</string>
    <string name="e_u_title">Data Point Selection</string>
    <string name="e_u_btn">GO AHEAD</string>
    <string name="contract_1">This is a contract entered into on </string>
    <string name="contract_2">between Digital Governance Group Ltd ("DGG") and the "Third Party" </string>
    <string name="contract_3">This contract extends to and terminates on </string>
    <string name="contract_4">\n"DGG" agrees to provide use and access to the platform TowneCrier, a Targeted Social Network, on a subscription bases for the "Third Party".  This subscription entitles "The Third Party" to the complete use of the site townecrier.ca for polling during the period of the subscription.</string>
    <string name="contract_5">\nThis use is limited to polling the designated database. "DGG" takes on the responsibility of delivering the results of these polls and analytics in as close to real time as current technology allows.\n\nAdditionally polling can be targeted to specific groups where the data fields exist for an additional set up fee.  Note this type of poll may incur up to 10 minute delays for incoming data tracking and processing.\n\nBe aware that "DGG" is an independent contractor and not an employee of the "Third Party", as such all fees, insurances and benefits as well as government remittances are not applicable.\n\nThe "Third Party" acknowledges all aggregated and accumulated data collected from polling and used for analysis is the property of "DGG".  Additionally the "Third Party" acknowledges that the personal and private information of all individuals within the greater database is the sole property of "DGG", and is treated with the respect that is legislated in any and all jurisdictions.  The "Third Party" holds and owns the intellectual property rights of the Data Analytics Report.  Additionally, the public release of these reports rests solely with the "Third Party", but must include the "DGG" name and logo.\n\nTo avoid a transfer of private or personal database information held by the "Third Party", the "Third Party" agrees to send out a series of invitations to the members of its database.  These individuals would be at liberty to register at the TowneCrier.ca website. In this way all polling would be of a voluntary nature. </string>
    <string name="contract_6">\nTerms and Termination:\n\nThis service will begin on the date of signing and terminate on the date specified in this contract.  At this time extensions to this contract are not automatic and require the “Third Party” to reapply.\n\nAdditional binding comments:</string>
    <string name="contract_7">The "Third Party" agrees to pay $</string>
    <string name="contract_8">for a subscription term that begins at signing and ends at </string>
    <string name="contract_9">I</string>
    <string name="contract_10">Have the authority and agree to bind the "Third Party"</string>
    <string name="contract_11">Print please </string>
    <string name="contract_12">Have the authority and agree to bind "DGG".</string>
    <string name="contract_13">Date :</string>
    <string name="contract_btn">I AGREE</string>
    <string name="s_u_btn">PROCEED FOR PAYMENT</string>
    <string name="ppt_1_title">Lorem ipsum: usage</string>
    <string name="ppt_1_content">Lorem ipsum dolor sit amet, porro meliore ad eum. Posse partem noluisse at vel, his an nulla vivendo pertinax. Qui ad posse labores assentior. Vide disputationi sea no, eos nihil pericula expetendis id.</string>
    <string name="ppt_2_title">Lorem ipsum: common examples</string>
    <string name="ppt_2_content">Lorem ipsum dolor sit amet, porro meliore ad eum. Posse partem noluisse at vel, his an nulla vivendo pertinax. Qui ad posse labores assentior. Vide disputationi sea no, eos nihil pericula expetendis id.</string>
    <string name="ppt_3_title">Lorem Ipsum: variants and technical information</string>
    <string name="ppt_3_content">Lorem ipsum dolor sit amet, porro meliore ad eum. Posse partem noluisse at vel, his an nulla vivendo pertinax. Qui ad posse labores assentior. Vide disputationi sea no, eos nihil pericula expetendis id.</string>
    <string name="ppt_4_title">Lorem ipsum: etymology and pronunciation</string>
    <string name="ppt_4_content">Lorem ipsum dolor sit amet, porro meliore ad eum. Posse partem noluisse at vel, his an nulla vivendo pertinax. Qui ad posse labores assentior. Vide disputationi sea no, eos nihil pericula expetendis id.</string>
    <string name="ppt_5_title">What is Lorem Ipsum?</string>
    <string name="ppt_5_content">Lorem ipsum dolor sit amet, porro meliore ad eum. Posse partem noluisse at vel, his an nulla vivendo pertinax. Qui ad posse labores assentior. Vide disputationi sea no, eos nihil pericula expetendis id.</string>

</resources>